# Untitled-Game-Engine

./: .gitignore  CMakeLists.txt  README.md
res/shader/: fragment.glsl  simple.frag  simple.vert  skybox.frag  skybox.vert  vertex.glsl  world.frag  world.vert
src/: Application.cpp  Camera.cpp  Camera.h  Renderer.cpp  Renderer.h  SceneManager.cpp  SceneManager.h  Shader.cpp  Shader.h
src/buffers/: DynamicBuffer.cpp  DynamicBuffer.h  DynamicIndexBuffer.cpp  DynamicIndexBuffer.h  DynamicSkyBoxBuffer.cpp  DynamicSkyBoxBuffer.h  DynamicVertexBuffer.cpp  DynamicVertexBuffer.h  IndexBuffer.cpp  IndexBuffer.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h  VertexBufferLayout.h
src/debug/: Debug.h  PerformanceTest.h
src/map/: ChunkManager.cpp  ChunkManager.h  MarchingCubesLookupTable.h
src/map/generation/: NoiseFunction.h  PerlinNoiseFunction2D.cpp  PerlinNoiseFunction2D.h  PerlinNoiseFunction3D.cpp  PerlinNoiseFunction3D.h  TerrainMesh.cpp  TerrainMesh.h
src/models/: Cube.cpp  Cube.h  Model.h  OBJLoader.cpp  OBJLoader.h  OBJModel.h  Quadrilateral.cpp  Quadrilateral.h  Square.cpp  Square.h  Triangle.cpp  Triangle.h
src/shapes/: Shape.cpp  Shape.h  Square.cpp  Square.h
src/util/: ByteHelper.h  FileHelper.h  ModelIdManager.cpp  ModelIdManager.h  OBJLoader.cpp  OBJLoader.h  ThreadPool.cpp  ThreadPool.h
